The upload doc tool now supports keywords. Tika is used to parse documents to text.