@@ -1,26 +1,35 @@
 package secondbrain.domain.tools.uploadeddoc;
 
-import com.google.common.collect.ImmutableList;
+import ai.djl.repository.FilenameUtils;
 import io.vavr.API;
 import io.vavr.control.Try;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
+import org.eclipse.microprofile.config.inject.ConfigProperty;
+import secondbrain.domain.args.ArgsAccessor;
 import secondbrain.domain.config.ModelConfig;
+import secondbrain.domain.constants.Constants;
 import secondbrain.domain.context.RagDocumentContext;
 import secondbrain.domain.context.RagMultiDocumentContext;
 import secondbrain.domain.context.SentenceSplitter;
 import secondbrain.domain.context.SentenceVectorizer;
+import secondbrain.domain.converter.FileToText;
 import secondbrain.domain.exceptions.FailedTool;
+import secondbrain.domain.limit.DocumentTrimmer;
 import secondbrain.domain.prompt.PromptBuilderSelector;
 import secondbrain.domain.tooldefs.Tool;
 import secondbrain.domain.tooldefs.ToolArgs;
 import secondbrain.domain.tooldefs.ToolArguments;
+import secondbrain.domain.validate.ValidateString;
 import secondbrain.infrastructure.ollama.OllamaClient;
 
+import java.io.File;
+import java.io.FileOutputStream;
+import java.util.Base64;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 /**
@@ -58,6 +67,12 @@ public class UploadedDoc implements Tool<Void> {
     @Inject
     private Arguments parsedArgs;
 
+    @Inject
+    private FileToText fileToText;
+
+    @Inject
+    private DocumentTrimmer documentTrimmer;
+
     @Override
     public String getName() {
         return UploadedDoc.class.getSimpleName();
@@ -70,7 +85,9 @@ public class UploadedDoc implements Tool<Void> {
 
     @Override
     public List<ToolArguments> getArguments() {
-        return ImmutableList.of();
+        return List.of(
+                new ToolArguments("keywords", "An optional list of keywords used to trim the document", "")
+        );
     }
 
     public List<RagDocumentContext<Void>> getContext(
@@ -79,7 +96,7 @@ public class UploadedDoc implements Tool<Void> {
             final List<ToolArgs> arguments) {
         parsedArgs.setInputs(arguments, prompt, context);
 
-        if (StringUtils.isBlank(parsedArgs.getDocument())) {
+        if (parsedArgs.getDocument().length == 0) {
             throw new FailedTool("No document found in context");
         }
 
@@ -123,14 +140,41 @@ public class UploadedDoc implements Tool<Void> {
                 context);
     }
 
-    private RagDocumentContext<Void> getDocumentContext(final String document) {
+    private RagDocumentContext<Void> getDocumentContext(final byte[] document) {
+        final File tempFile = createTempFile();
+
+        Try.withResources(() -> new FileOutputStream(tempFile))
+                .of(writer -> Try.run(() -> writer.write(document)));
+
+        final String contents = fileToText.convert(tempFile.getAbsolutePath());
+
+        return Try.of(() -> documentTrimmer.trimDocument(
+                        contents,
+                        parsedArgs.getKeywords(),
+                        Constants.DEFAULT_DOCUMENT_TRIMMED_SECTION_LENGTH))
+                .map(this::getTrimmedDocumentContext)
+                .onFailure(throwable -> System.err.println("Failed to vectorize sentences: " + ExceptionUtils.getRootCauseMessage(throwable)))
+                // If we can't vectorize the sentences, just return the document
+                .recover(e -> new RagDocumentContext<>(contents, List.of()))
+                .get();
+    }
+
+    private RagDocumentContext<Void> getTrimmedDocumentContext(final String document) {
         return Try.of(() -> sentenceSplitter.splitDocument(document, 10))
-                .map(sentences -> new RagDocumentContext<Void>(document, sentences.stream()
-                        .map(sentenceVectorizer::vectorize)
-                        .collect(Collectors.toList())))
+                .map(sentences -> new RagDocumentContext<Void>(
+                        document,
+                        sentences.stream()
+                                .map(sentenceVectorizer::vectorize)
+                                .collect(Collectors.toList())))
                 .onFailure(throwable -> System.err.println("Failed to vectorize sentences: " + ExceptionUtils.getRootCauseMessage(throwable)))
                 // If we can't vectorize the sentences, just return the document
                 .recover(e -> new RagDocumentContext<>(document, List.of()))
+                .get();
+    }
+
+    private File createTempFile() {
+        return Try.of(() -> File.createTempFile("tempFile", "." + FilenameUtils.getFileExtension(parsedArgs.getFileName())))
+                .peek(File::deleteOnExit)
                 .get();
     }
 }
@@ -143,15 +187,44 @@ class Arguments {
 
     private Map<String, String> context;
 
+    @Inject
+    @ConfigProperty(name = "sb.upload.keywords")
+    private Optional<String> uploadKeywords;
+
+    @Inject
+    private ValidateString validateString;
+
+    @Inject
+    private ArgsAccessor argsAccessor;
+
     public void setInputs(final List<ToolArgs> arguments, final String prompt, final Map<String, String> context) {
         this.arguments = arguments;
         this.prompt = prompt;
         this.context = context;
     }
 
-    public String getDocument() {
+    public byte[] getDocument() {
         return Try.of(() -> context.get("document"))
+                .map(document -> Base64.getDecoder().decode(document))
+                .recover(throwable -> new byte[0])
+                .get();
+    }
+
+    public String getFileName() {
+        return Try.of(() -> context.get("filename"))
                 .recover(throwable -> "")
+                .get();
+    }
+
+    public List<String> getKeywords() {
+        return Try.of(uploadKeywords::get)
+                .mapTry(validateString::throwIfEmpty)
+                .recover(e -> argsAccessor.getArgument(arguments, "keywords", ""))
+                .mapTry(validateString::throwIfEmpty)
+                .recover(e -> context.get("upload_keywords"))
+                .mapTry(validateString::throwIfEmpty)
+                .recover(e -> "")
+                .map(k -> List.of(k.split(",")))
                 .get();
     }
 }
